--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -12,3 +12,8 @@ html {
 body {
     height: 100%;
 }
+
+input:-webkit-autofill {
+    transition: background-color 100000s ease-in-out 0s;
+    -webkit-text-fill-color: #000 !important;
+}
